--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,6 @@
-requests
-beautifulsoup4
-lxml
+requests>=2.31.0
+beautifulsoup4>=4.12.0
+lxml>=4.9.0
+duckduckgo-search>=3.9.0
+schedule>=1.2.0
+pandas>=2.0.0
